worked on spain page a little more, done for now

--- a/spain.html
+++ b/spain.html
@@ -62,10 +62,10 @@
                 </ul>
         </nav>
         <div id="introduction">
-            <h4>This is the Spain page</h4>
+            <h4>My trip to Spain</h4>
             <div class="row">
                 <div class="column">
-                    <a href="spain/sp1.jpg" target="_blank"><img src="spain/sp1.JPG"></a>
+                    <a href="spain/sp1.jpg" target="_blank" alt="selfie in Barcelona"><img src="spain/sp1.JPG"></a>
                     <a href="spain/sp3.JPG" target="_blank"><img src="spain/sp3.JPG"></a>
                     <a href="spain/sp5.JPG" target="_blank"><img src="spain/sp5.JPG"></a>
                     <a href="spain/sp7.JPG" target="_blank"><img src="spain/sp7.JPG"></a>
@@ -77,8 +77,8 @@
                     <a href="spain/sp8.JPG" target="_blank"><img src="spain/sp8.JPG"></a>
                 </div>
             </div>
-            <h4>Biking across LA</h4>
-            <p>I rented a bike from a shop on near Venice beach. This was my main form of transportation over the next 7 days. It was a 6 hour round trip from my AirBNB in Hawthorne to the festival grounds in Long Beach. I took the LA river bike "highway" which offered really cool views and high speeds. I explored from the Pacific Palisades down to Redondo Beach, and from Long Beach through Compton, all the way up to Korea Town and West Hollywood.</p>
+            <h4>What a time to be alive!</h4>
+            <p>In July of 2018 I traveled to Spain, mainly to see the MadCool Festival in Madrid. In one day I saw the most stacked lineup of my life up to that point. Pearl Jam, Tame Impala, Post Malone, Kasabian, MGMT, and many hours of house music from different Djs throughout the night. I spent the remainder of my week in Spain exploring Madrid and Barcelona on foot and by bike. .</p>
             <div class="row">
                 <div class="column">
                     <a href="spain/sp9.jpg" target="_blank"><img src="spain/sp9.JPG"></a>
@@ -94,8 +94,8 @@
                 </div>
             </div>
 
-            <h4>Some more shit here</h4>
-            <p>I rented a bike from a shop on near Venice beach. This was my main form of transportation over the next 7 days. It was a 6 hour round trip from my AirBNB in Hawthorne to the festival grounds in Long Beach. I took the LA river bike "highway" which offered really cool views and high speeds. I explored from the Pacific Palisades down to Redondo Beach, and from Long Beach through Compton, all the way up to Korea Town and West Hollywood.</p>
+            <h4>Good vibes</h4>
+            <p>My accommodations were simple. I rented a small room from a friendly old Spanish lady in San Blas, a quiet area in the north of Madrid. Madrid is a very well connected city, and getting around was easy with the Metro, as well as rental bikes. I spent a lot of time walking as well. The Retiro Park was my favorite area, and I spent a few days coming back here to soak up the vibes. The sandwiches were amazing. I often found sandwich shops where you could buy half a sandwich with the crust cut off. The food and drink was very cheap and I ate meals like this a few times a day.</p>
             <div class="row">
                 <div class="column">
                     <a href="spain/sp17.jpg" target="_blank"><img src="spain/sp17.JPG"></a>
@@ -111,8 +111,8 @@
                 </div>
             </div>
 
-            <h4>Final shit here</h4>
-            <p>I rented a bike from a shop on near Venice beach. This was my main form of transportation over the next 7 days. It was a 6 hour round trip from my AirBNB in Hawthorne to the festival grounds in Long Beach. I took the LA river bike "highway" which offered really cool views and high speeds. I explored from the Pacific Palisades down to Redondo Beach, and from Long Beach through Compton, all the way up to Korea Town and West Hollywood.</p>
+            <h4>Saying farewell</h4>
+            <p>I explored Barcelona a lot more thoroughly than Madrid, due to having free access to a bike. After checking out the Sunday flea market and buying some interesting stuff, I spent the days chilling on the beach and smoking fat cigars. On my final night I enjoyed an expensive hotel room to myself. Barcelona was a great way to wind down after the festival before coming home. Having spent only 8 days in Spain I did not even scratch the surface of what there is to experience, but I left with a hunger to return. Some day I hope to get more time there to immerse myself in the culture.</p>
             <div class="row">
                 <div class="column">
                     <a href="spain/sp25.jpg" target="_blank"><img src="spain/sp25.JPG"></a>
